ci:学习笔记